<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".coin.coin.view.ui.CoinActivity"
    android:background="@color/text">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Toolbar
            android:id="@+id/tbMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:title="@string/app_name"
            android:titleTextColor="@color/text"
            app:layout_constraintBottom_toTopOf="@+id/llInfo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvData"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/llInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbMain"
            android:layoutAnimation="@anim/layout_animation_left_to_right"
            />

        <LinearLayout
            android:id="@+id/llEmptyState"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/llInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbMain"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/ivEmptyState"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_empty" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp"/>

            <TextView
                android:id="@+id/tvTitleEmptyState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_empty_state"
                android:textColor="@color/textPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp"/>

            <TextView
                android:id="@+id/tvMessageEmptyState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_empty_state"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/size_text" />

            <Button
                android:id="@+id/btnReloadCoinType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                android:text="@string/button_reload"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_from"
                        android:textColor="@color/textPrimary"
                        android:textSize="@dimen/size_text" />

                    <Space
                        android:layout_width="@dimen/separation_width_data"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/spCoinFrom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="visible"

                            />

                        <ImageView
                            android:id="@+id/ivEmptySpinnerFrom"
                            android:layout_width="@dimen/size_arrow"
                            android:layout_height="@dimen/size_arrow"
                            android:src="@drawable/ic_cancel"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_from"
                        android:textColor="@color/textPrimary"
                        android:textSize="@dimen/size_text" />

                    <Space
                        android:layout_width="@dimen/separation_width_data"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/spCoinTo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="visible" />

                        <ImageView
                            android:id="@+id/ivEmptySpinnerTo"
                            android:layout_width="@dimen/size_arrow"
                            android:layout_height="@dimen/size_arrow"
                            android:src="@drawable/ic_cancel"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_limit"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/size_text" />

                <Space
                    android:layout_width="@dimen/separation_width_data"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLimit"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:text="3"
                    android:textAlignment="center"
                    android:textColor="@color/textPrimary" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorAccent"
                android:text="@string/button_search"
                android:textColor="@color/text" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/llInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbMain">

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.1"
                android:background="@color/colorPrimary" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>